--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: Suggest a new feature for MCP jq Server
+description: Suggest a new feature for @247arjun/mcp-jq
 title: "[Feature] "
 labels: ["enhancement", "triage"]
 
